vlib/v/checker/tests/struct_field_init_and_default_is_map_err.out
vlib/v/checker/tests/struct_field_init_and_default_is_map_err.vv:7:25: error: cannot copy map: call `clone` method (or use a reference)
    5 | struct Foo {
    6 | mut:
    7 |     field map[string]int = const_map
      |                            ~~~~~~~~~
    8 | }
    9 |
vlib/v/checker/tests/struct_field_init_and_default_is_map_err.vv:12:10: error: cannot assign a const map to mut struct field, call `clone` method (or use a reference)
   10 | fn main() {
   11 |     _ = Foo{
   12 |         field: const_map
      |                ~~~~~~~~~
   13 |     }
   14 | }
