vlib/v/checker/tests/struct_field_init_and_default_is_map_err.vv
const const_map = {
	'key': 4
}

struct Foo {
mut:
	field map[string]int = const_map
}

fn main() {
	_ = Foo{
		field: const_map
	}
}
